[gd_scene load_steps=8 format=3 uid="uid://csh0df8wdxhgn"]

[ext_resource type="Script" path="res://Code/main_meau.gd" id="1_hhv0w"]
[ext_resource type="Texture2D" uid="uid://djx5iu233nf4i" path="res://Art/UI/Button_End_OnHover_OnClick.png" id="2_kyba8"]
[ext_resource type="Texture2D" uid="uid://cwbq8i3n85p7h" path="res://Art/UI/Button_End_Normal.png" id="3_18rqb"]
[ext_resource type="Theme" uid="uid://bphefhuacy6kd" path="res://Fonts/MainTheme.tres" id="4_yxcd8"]
[ext_resource type="Texture2D" uid="uid://dq0q2jboya6jq" path="res://Art/UI/Button_Break_Normal.png" id="5_grn4k"]
[ext_resource type="Texture2D" uid="uid://dv527jp84e6iw" path="res://Art/UI/Button_Break_OnHover_OnClick.png" id="6_ajn7k"]
[ext_resource type="PackedScene" uid="uid://cenou762pxkr8" path="res://button_soundeffect.tscn" id="7_h7oa3"]

[node name="MainMeau" type="Node2D"]
texture_filter = 1
script = ExtResource("1_hhv0w")

[node name="ui" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BackGround" type="ColorRect" parent="ui"]
layout_mode = 0
offset_right = 961.0
offset_bottom = 538.0
color = Color(0.215686, 0.215686, 0.215686, 1)

[node name="ButtonHolder" type="VBoxContainer" parent="ui"]
layout_mode = 0
offset_left = 400.0
offset_top = 88.0
offset_right = 516.0
offset_bottom = 355.0
scale = Vector2(1.4, 1.4)
theme_override_constants/separation = 25
metadata/_edit_group_ = true

[node name="Start" type="TextureButton" parent="ui/ButtonHolder"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("2_kyba8")
texture_hover = ExtResource("3_18rqb")

[node name="Label" type="Label" parent="ui/ButtonHolder/Start"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 104.0
offset_bottom = 40.0
theme = ExtResource("4_yxcd8")
text = "Start"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Settings" type="TextureButton" parent="ui/ButtonHolder"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("5_grn4k")
texture_hover = ExtResource("6_ajn7k")

[node name="Label" type="Label" parent="ui/ButtonHolder/Settings"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 104.0
offset_bottom = 40.0
theme = ExtResource("4_yxcd8")
text = "settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Credits" type="TextureButton" parent="ui/ButtonHolder"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("5_grn4k")
texture_hover = ExtResource("6_ajn7k")

[node name="Label" type="Label" parent="ui/ButtonHolder/Credits"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 104.0
offset_bottom = 40.0
theme = ExtResource("4_yxcd8")
text = "Credits"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Quit" type="TextureButton" parent="ui/ButtonHolder"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("2_kyba8")
texture_hover = ExtResource("3_18rqb")

[node name="Label" type="Label" parent="ui/ButtonHolder/Quit"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 104.0
offset_bottom = 40.0
theme = ExtResource("4_yxcd8")
text = "Quit"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonSoundeffect" parent="." instance=ExtResource("7_h7oa3")]

[connection signal="button_down" from="ui/ButtonHolder/Start" to="ButtonSoundeffect" method="Clicked"]
[connection signal="mouse_entered" from="ui/ButtonHolder/Start" to="ButtonSoundeffect" method="Hover"]
[connection signal="pressed" from="ui/ButtonHolder/Start" to="." method="_on_start_pressed"]
[connection signal="button_down" from="ui/ButtonHolder/Settings" to="ButtonSoundeffect" method="Clicked"]
[connection signal="mouse_entered" from="ui/ButtonHolder/Settings" to="ButtonSoundeffect" method="Hover"]
[connection signal="pressed" from="ui/ButtonHolder/Settings" to="." method="_on_settings_pressed"]
[connection signal="button_down" from="ui/ButtonHolder/Credits" to="ButtonSoundeffect" method="Clicked"]
[connection signal="mouse_entered" from="ui/ButtonHolder/Credits" to="ButtonSoundeffect" method="Hover"]
[connection signal="pressed" from="ui/ButtonHolder/Credits" to="." method="_on_credits_pressed"]
[connection signal="button_down" from="ui/ButtonHolder/Quit" to="ButtonSoundeffect" method="Denied"]
[connection signal="mouse_entered" from="ui/ButtonHolder/Quit" to="ButtonSoundeffect" method="Hover"]
[connection signal="pressed" from="ui/ButtonHolder/Quit" to="." method="_on_quit_pressed"]

[editable path="ButtonSoundeffect"]
